--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+== 1.0.1 / 2011-09-15
+
+- Split out gemspec into separate file and use for Rakefile.
+- Add homepage and rubyforge project to gemspec.
+
 == 1.0.0 / 2008-08-29
 
 - First public release
