--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+== 1.1.0 / 2012-06-03
+
+- Fixes to support ruby 1.9 (jedi4ever & codemonkeyjohn).
+
 == 1.0.1 / 2011-09-15
 
 - Split out gemspec into separate file and use for Rakefile.
