--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 == Unreleased:
 
+- Replaced DES-algorithm with Ruby's built-in OpenSSL wrapper instead
 - Added a project Gemfile
 
 == 1.1.0 / 2012-06-03
