--- a/Changelog.rdoc
+++ b/Changelog.rdoc
@@ -3,6 +3,7 @@
 - Replaced DES-algorithm with Ruby's built-in OpenSSL wrapper instead
 - Parse framebuffer width/height and hostname from ServerInitialisation
 - Added a project Gemfile
+- Add a required ruby version (higher than Ruby 2.5)
 
 == 1.1.0 / 2012-06-03
 
